separate build:test command

--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -53,7 +53,7 @@
     "format:check": "prettier --check .",
     "lint": "next lint",
     "start": "next start --port 3010",
-    "start:test": "cross-env NODE_ENV=test npm start"
+    "start:test": "cross-env NODE_ENV=test pnpm start"
   },
   "engines": {
     "node": "=20"
