--- a/apps/func-incoming-responses/package.json
+++ b/apps/func-incoming-responses/package.json
@@ -31,6 +31,7 @@
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
+    "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "dev": "npm-run-all --parallel dev:ts dev:func",
     "dev:func": "func start -p 7072 --verbose --javascript",
