--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -45,6 +45,7 @@
     "build:copy": "node src/copy.js",
     "build:ts": "cross-env NODE_ENV=production tsup",
     "build:watch": "cross-env NODE_ENV=development tsup --watch",
+    "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
