--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -75,7 +75,7 @@
     "format:check": "prettier --check .",
     "lint": "next lint",
     "start": "next start --port 3003",
-    "start:test": "cross-env NODE_ENV=test npm start"
+    "start:test": "cross-env NODE_ENV=test pnpm start"
   },
   "engines": {
     "node": "=20"
