--- a/apps/func-response-processor/package.json
+++ b/apps/func-response-processor/package.json
@@ -36,6 +36,7 @@
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
+    "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "dev": "npm-run-all --parallel dev:ts dev:func",
     "dev:func": "func start -p 7073 --verbose --javascript",
