--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -58,6 +58,7 @@
     "build:tw": "run-p build:tw:*",
     "build:tw:components": "tailwindcss -i src/components.css -o src/public/components.css",
     "build:tw:utilities": "tailwindcss -i src/utilities.css -o src/public/utilities.css",
+    "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "dev": "run-p dev:tw:* dev:ts",
     "dev:offline": "pnpm run dev",
