--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,7 @@
       "outputs": ["dist/**", ".next/**"]
     },
     "build:test": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build:test"],
       "outputs": ["dist/**", ".next/**"]
     },
     "dev": {
