--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "5.3.1",
+    "cross-env": "7.0.3",
     "husky": "8.0.3",
     "standard-version": "9.5.0",
     "syncpack": "11.2.1",
@@ -37,6 +38,7 @@
     "release": "standard-version",
     "release:dry": "standard-version --dry-run",
     "build": "turbo run build",
+    "build:test": "cross-env NODE_ENV=test turbo run build:test --cache-dir=.turbo",
     "check": "turbo run check --parallel --continue",
     "dev": "doppler run --config dev -- turbo run dev",
     "dev:docs": "doppler run --config dev -- turbo run dev:docs",
@@ -60,7 +62,7 @@
     "release:rc": "standard-version --prerelease rc --no-verify",
     "release:rc:dry": "standard-version --dry-run --prerelease rc",
     "start": "turbo run start",
-    "start:test": "turbo run start:test",
+    "start:test": "cross-env NODE_ENV=test turbo run start:test",
     "syncpack:format": "syncpack format",
     "syncpack:lint": "syncpack lint",
     "syncpack:mismatches": "syncpack list-mismatches",
