--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -44,7 +44,7 @@
     "@fortawesome/free-regular-svg-icons": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@uzh-bf/design-system": "2.4.2",
+    "@uzh-bf/design-system": "2.4.6",
     "next": "14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -58,6 +58,7 @@
     "build:tw": "run-p build:tw:*",
     "build:tw:components": "tailwindcss -i src/components.css -o src/public/components.css",
     "build:tw:utilities": "tailwindcss -i src/utilities.css -o src/public/utilities.css",
+    "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "dev": "run-p dev:tw:* dev:ts",
     "dev:offline": "pnpm run dev",
