--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -8,7 +8,7 @@
     "@klicker-uzh/prisma": "workspace:*",
     "@klicker-uzh/shared-components": "workspace:*",
     "@next-auth/prisma-adapter": "1.0.7",
-    "@uzh-bf/design-system": "2.4.2",
+    "@uzh-bf/design-system": "2.4.6",
     "axios": "1.4.0",
     "bcryptjs": "2.4.3",
     "js-cookie": "3.0.5",
@@ -53,7 +53,7 @@
     "format:check": "prettier --check .",
     "lint": "next lint",
     "start": "next start --port 3010",
-    "start:test": "cross-env NODE_ENV=test npm start"
+    "start:test": "cross-env NODE_ENV=test pnpm start"
   },
   "engines": {
     "node": "=20"
