--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -51,7 +51,7 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/ramda": "^0.29.3",
     "@types/ws": "^8.5.9",
-    "@uzh-bf/design-system": "2.4.2",
+    "@uzh-bf/design-system": "2.4.6",
     "axios": "1.4.0",
     "cross-env": "7.0.3",
     "eslint": "8.45.0",
@@ -77,7 +77,7 @@
     "format:check": "prettier --check .",
     "start": "node -r dotenv/config dist/index.js",
     "--start:test": "nyc --silent npm start",
-    "start:test": "npm start",
+    "start:test": "pnpm start",
     "exec:prod": "doppler run --config prd -- bun run"
   },
   "engines": {
