--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -17,7 +17,7 @@
     "@klicker-uzh/prisma": "workspace:*",
     "@klicker-uzh/shared-components": "workspace:*",
     "@socialgouv/matomo-next": "1.6.1",
-    "@uzh-bf/design-system": "2.4.2",
+    "@uzh-bf/design-system": "2.4.6",
     "d3": "7.8.4",
     "dayjs": "1.11.9",
     "deepmerge": "4.3.1",
@@ -91,7 +91,7 @@
     "format:check": "prettier --check .",
     "lint": "next lint",
     "start": "next start --port 3002",
-    "start:test": "cross-env NODE_ENV=test npm start"
+    "start:test": "cross-env NODE_ENV=test pnpm start"
   },
   "engines": {
     "node": "=20"
