--- a/apps/func-response-processor/package.json
+++ b/apps/func-response-processor/package.json
@@ -23,7 +23,7 @@
     "@types/md5": "2.3.2",
     "@types/node": "^18.17.4",
     "@types/ramda": "^0.29.3",
-    "@uzh-bf/design-system": "2.4.2",
+    "@uzh-bf/design-system": "2.4.6",
     "azure-functions-core-tools": "4.0.5390",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
@@ -36,6 +36,7 @@
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
+    "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "dev": "npm-run-all --parallel dev:ts dev:func",
     "dev:func": "func start -p 7073 --verbose --javascript",
