--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -24,7 +24,7 @@
     "typescript": "5.0.4"
   },
   "peerDependencies": {
-    "@uzh-bf/design-system": "2.4.2",
+    "@uzh-bf/design-system": "2.4.6",
     "next": "14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -33,6 +33,7 @@
     "analyze": "size-limit --why",
     "build": "cross-env NODE_ENV=production tsup",
     "build:watch": "cross-env NODE_ENV=development tsup --watch",
+    "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
