--- a/apps/backend-docker/.env.template
+++ b/apps/backend-docker/.env.template
@@ -4,5 +4,5 @@ REDIS_HOST="localhost"
 REDIS_PORT=6379
 REDIS_CACHE_HOST="localhost"
 REDIS_CACHE_PORT=6380
-API_DOMAIN="api.klicker.com"
+API_DOMAIN="api.klicker.com:3000"
 COOKIE_DOMAIN=".klicker.com"
