--- a/apps/frontend-pwa/.env.development
+++ b/apps/frontend-pwa/.env.development
@@ -1,4 +1,4 @@
-COOKIE_DOMAIN=.klicker.com
+COOKIE_DOMAIN=.klicker.com:3000
 API_DOMAIN=api$COOKIE_DOMAIN
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/avatars"
