--- a/apps/frontend-pwa/.env.development
+++ b/apps/frontend-pwa/.env.development
@@ -4,7 +4,7 @@ API_DOMAIN=api$COOKIE_DOMAIN
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/avatars"
 NEXT_PUBLIC_IMAGE_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/img"
 NEXT_PUBLIC_ADD_RESPONSE_URL="http://func-responses.klicker.com/api/AddResponse"
-NEXT_PUBLIC_API_URL="http://$API_DOMAIN/api/graphql"
+NEXT_PUBLIC_API_URL="http://api.klicker.com:3000/api/graphql"
 NEXT_PUBLIC_API_URL_SSR=http://127.0.0.1:3000/api/graphql
 NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BKgVsZFXdusxzKMrOTIJiAtiou8STnRcwbv_nvlseghjAUAlfmWKpCKBcfY_D-DH9PPYBunrJRh4uNeNF7a3TU4"
 
