--- a/apps/frontend-control/.env.development
+++ b/apps/frontend-control/.env.development
@@ -2,7 +2,7 @@ COOKIE_DOMAIN=.klicker.com
 API_DOMAIN=api$COOKIE_DOMAIN
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/avatars"
-NEXT_PUBLIC_API_URL="http://$API_DOMAIN/api/graphql"
+NEXT_PUBLIC_API_URL="http://api.klicker.com:3000/api/graphql"
 NEXT_PUBLIC_API_URL_SSR=http://127.0.0.1:3000/api/graphql
 
 NEXT_PUBLIC_PWA_URL="http://pwa.klicker.com"
