--- a/apps/auth/.env.development
+++ b/apps/auth/.env.development
@@ -1,4 +1,4 @@
-COOKIE_DOMAIN=.klicker.com
+COOKIE_DOMAIN=.klicker.com:3000
 NEXTAUTH_URL=http://auth.klicker.com
 EDUID_CLIENT_ID=uzh_klicker_auth_dev
 EDUID_WELL_KNOWN=https://login.test.eduid.ch/.well-known/openid-configuration
