--- a/apps/frontend-control/.env.production
+++ b/apps/frontend-control/.env.production
@@ -5,9 +5,9 @@ NEXT_PUBLIC_AVATAR_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/avatars"
 NEXT_PUBLIC_API_URL="https://$API_DOMAIN/api/graphql"
 NEXT_PUBLIC_API_URL_SSR="http://klicker-v2-prod-klicker-uzh-v2-backend-graphql:3000/api/graphql"
 
-NEXT_PUBLIC_PWA_URL="https://pwa.klicker.uzh.ch"
-NEXT_PUBLIC_MANAGE_URL="https://manage.klicker.uzh.ch"
-NEXT_PUBLIC_CONTROL_URL="https://control.klicker.uzh.ch"
+NEXT_PUBLIC_PWA_URL="http://86.119.41.141:3001"
+NEXT_PUBLIC_MANAGE_URL="http://86.119.41.141:3002"
+NEXT_PUBLIC_CONTROL_URL="http://86.119.41.141:3003"
 
 NEXT_PUBLIC_MATOMO_URL="https://webstats.uzh.ch/"
 NEXT_PUBLIC_MATOMO_SITE_ID=480
