--- a/apps/frontend-control/.env.production
+++ b/apps/frontend-control/.env.production
@@ -2,7 +2,7 @@ COOKIE_DOMAIN=.klicker.uzh.ch
 API_DOMAIN=backend-sls$COOKIE_DOMAIN
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/avatars"
-NEXT_PUBLIC_API_URL="https://$API_DOMAIN/api/graphql"
+NEXT_PUBLIC_API_URL="http://86.119.41.141:3000/api/graphql"
 NEXT_PUBLIC_API_URL_SSR="http://klicker-v2-prod-klicker-uzh-v2-backend-graphql:3000/api/graphql"
 
 NEXT_PUBLIC_PWA_URL="http://86.119.41.141:3001"
