--- a/apps/frontend-pwa/.env.production
+++ b/apps/frontend-pwa/.env.production
@@ -4,13 +4,13 @@ API_DOMAIN=backend-sls$COOKIE_DOMAIN
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/avatars"
 NEXT_PUBLIC_IMAGE_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/img"
 NEXT_PUBLIC_ADD_RESPONSE_URL="https://backend-responses$COOKIE_DOMAIN/api/AddResponse"
-NEXT_PUBLIC_API_URL="https://$API_DOMAIN/api/graphql"
+NEXT_PUBLIC_API_URL="http://86.119.41.141:3000/api/graphql"
 NEXT_PUBLIC_API_URL_SSR="http://klicker-v2-prod-klicker-uzh-v2-backend-graphql:3000/api/graphql"
 NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BPz0NNgACtulol5iYwmnFzzL-gkTUQ2jZrXsdrr9oEfhZUByWw8n_lu6tiDGmrbiJqRT-CYw0p9rextvtknuQAE"
 
-NEXT_PUBLIC_PWA_URL="https://pwa.klicker.uzh.ch"
-NEXT_PUBLIC_MANAGE_URL="https://manage.klicker.uzh.ch"
-NEXT_PUBLIC_CONTROL_URL="https://control.klicker.uzh.ch"
+NEXT_PUBLIC_PWA_URL="http://86.119.41.141:3001"
+NEXT_PUBLIC_MANAGE_URL="http://86.119.41.141:3002"
+NEXT_PUBLIC_CONTROL_URL="http://86.119.41.141:3003"
 
 NEXT_PUBLIC_MATOMO_URL="https://webstats.uzh.ch/"
 NEXT_PUBLIC_MATOMO_SITE_ID="469"
