--- a/apps/auth/.env.development
+++ b/apps/auth/.env.development
@@ -1,6 +1,6 @@
 COOKIE_DOMAIN=.klicker.com:3000
-NEXTAUTH_URL=http://auth.klicker.com
+NEXTAUTH_URL=http://86.119.41.141:3010
 EDUID_CLIENT_ID=uzh_klicker_auth_dev
 EDUID_WELL_KNOWN=https://login.test.eduid.ch/.well-known/openid-configuration
 NEXT_PUBLIC_EDUID_ID=eduid-test
-NEXT_PUBLIC_DEFAULT_REDIRECT=http://manage.klicker.com
+NEXT_PUBLIC_DEFAULT_REDIRECT=http://86.119.41.141:3002
