--- a/apps/frontend-control/.env.development
+++ b/apps/frontend-control/.env.development
@@ -5,6 +5,6 @@ NEXT_PUBLIC_AVATAR_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/avatars"
 NEXT_PUBLIC_API_URL="http://api.klicker.com:3000/api/graphql"
 NEXT_PUBLIC_API_URL_SSR=http://127.0.0.1:3000/api/graphql
 
-NEXT_PUBLIC_PWA_URL="http://pwa.klicker.com"
-NEXT_PUBLIC_MANAGE_URL="http://manage.klicker.com"
-NEXT_PUBLIC_CONTROL_URL="http://control.klicker.com"
+NEXT_PUBLIC_PWA_URL="http://86.119.41.141:3001"
+NEXT_PUBLIC_MANAGE_URL="http://86.119.41.141:3002"
+NEXT_PUBLIC_CONTROL_URL="http://86.119.41.141:3003"
