--- a/apps/frontend-pwa/.env.development
+++ b/apps/frontend-pwa/.env.development
@@ -1,9 +1,9 @@
 COOKIE_DOMAIN=.klicker.com:3000
-API_DOMAIN=api$COOKIE_DOMAIN
+API_DOMAIN=86.119.41.141::3000
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/avatars"
 NEXT_PUBLIC_IMAGE_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/img"
-NEXT_PUBLIC_ADD_RESPONSE_URL="http://func-responses.klicker.com/api/AddResponse"
+NEXT_PUBLIC_ADD_RESPONSE_URL="http://86.119.41.141:3000/api/AddResponse"
 NEXT_PUBLIC_API_URL="http://86.119.41.141:3000/api/graphql"
 NEXT_PUBLIC_API_URL_SSR=http://86.119.41.141:3000/api/graphql
 NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BKgVsZFXdusxzKMrOTIJiAtiou8STnRcwbv_nvlseghjAUAlfmWKpCKBcfY_D-DH9PPYBunrJRh4uNeNF7a3TU4"
