--- a/apps/frontend-pwa/.env.production
+++ b/apps/frontend-pwa/.env.production
@@ -3,7 +3,7 @@ API_DOMAIN=backend-sls$COOKIE_DOMAIN
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/avatars"
 NEXT_PUBLIC_IMAGE_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/img"
-NEXT_PUBLIC_ADD_RESPONSE_URL="https://backend-responses$COOKIE_DOMAIN/api/AddResponse"
+NEXT_PUBLIC_ADD_RESPONSE_URL="https://86.119.41.141:3000/api/AddResponse"
 NEXT_PUBLIC_API_URL="http://86.119.41.141:3000/api/graphql"
 NEXT_PUBLIC_API_URL_SSR="http://klicker-v2-prod-klicker-uzh-v2-backend-graphql:3000/api/graphql"
 NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BPz0NNgACtulol5iYwmnFzzL-gkTUQ2jZrXsdrr9oEfhZUByWw8n_lu6tiDGmrbiJqRT-CYw0p9rextvtknuQAE"
