--- a/apps/auth/.env.test
+++ b/apps/auth/.env.test
@@ -6,3 +6,4 @@ NEXT_PUBLIC_EDUID_ID=eduid-test
 NEXT_PUBLIC_DEFAULT_REDIRECT=http://127.0.0.1:3002
 DATABASE_URL=postgres://klicker:klicker@localhost:5432/klicker
 APP_SECRET=abcd
+NEXT_PUBLIC_AUTH_URL=http://127.0.0.1:3010
