--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -64,6 +64,7 @@
     "ioredis": "5.3.2",
     "jest": "29.5.0",
     "npm-run-all": "4.1.5",
+    "nyc": "15.1.0",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
     "size-limit": "8.2.4",
@@ -77,7 +78,8 @@
     "analyze": "size-limit --why",
     "build": "run-s generate build:ts",
     "build:ts": "cross-env NODE_ENV=production tsup --dts",
-    "build:test": "pnpm run build",
+    "build:test": "run-s build build:instrument",
+    "build:instrument": "nyc instrument --compact=false --in-place dist dist",
     "check": "tsc --noEmit",
     "dev": "npm-run-all --parallel dev:graphql dev:ts",
     "dev:graphql": "doppler run --config dev -- graphql-codegen --config codegen.ts --watch 'src/**.graphql' --watch 'src/**.ts'",
