submit to coveralls

--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -148,3 +148,6 @@ jobs:
         with:
           name: code-coverage
           path: cypress/coverage
+
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
