start not in background (debug)

--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -120,10 +120,10 @@ jobs:
           DATABASE_URL: postgres://klicker:klicker@localhost:5432/klicker
 
       - name: Start services in the background
-        run: pnpm run start:test &
+        # run: pnpm run start:test &
         env:
           DATABASE_URL: postgres://klicker:klicker@localhost:5432/klicker
-        # run: pnpm run start:test
+        run: pnpm run start:test
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
