enhance(cypress): add code coverage for apps/backend-docker code through cypress (#4001)
Co-authored-by: sjschlapbach <julius.schlapbach@gmx.net>
Co-authored-by: Julius Schlapbach <80708107+sjschlapbach@users.noreply.github.com>

--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -142,3 +142,12 @@ jobs:
           DATABASE_URL: postgres://klicker:klicker@localhost:5432/klicker
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_ENV: production
+
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage
+          path: cypress/coverage
+
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
