--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "@tsconfig/node18/tsconfig.json",
   "include": ["src", "src/types/app.ts"],
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "sourceMap": true
   },
   "ts-node": {
     "transpileOnly": true
