chore: restore old login page with notice from index, redirect to login instead of V2 when unauthorized, disable autoscaling and reduce replicas

--- a/deploy/env-prod/values.yaml
+++ b/deploy/env-prod/values.yaml
@@ -54,14 +54,14 @@ services:
     enabled: true
 
 frontend:
-  replicaCount: 3
+  replicaCount: 2
 
   displayAAI: true
 
   hostname: app.klicker.uzh.ch
 
   autoscaling:
-    enabled: true
+    enabled: false
 
   vpa:
     enabled: false
@@ -83,12 +83,12 @@ frontend:
       maxUnavailable: 50%
 
 backend:
-  replicaCount: 3
+  replicaCount: 2
 
   hostname: api.klicker.uzh.ch
 
   autoscaling:
-    enabled: true
+    enabled: false
 
   vpa:
     enabled: false
