--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -7,6 +7,7 @@
     "@apollo/client": "3.8.3",
     "@azure/storage-blob": "12.15.0",
     "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-brands-svg-icons": "6.4.2",
     "@fortawesome/free-regular-svg-icons": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
