--- a/.github/workflows/v3_frontend-control-docker-qa.yml
+++ b/.github/workflows/v3_frontend-control-docker-qa.yml
@@ -3,6 +3,7 @@ name: Build Docker image for frontend-control (QA)
 on:
   push:
     branches:
+      - 'switch*'
       - 'v3'
       - 'v3*'
       - 'CI'
