--- a/.github/workflows/v3_frontend-pwa-docker-prod.yml
+++ b/.github/workflows/v3_frontend-pwa-docker-prod.yml
@@ -3,6 +3,8 @@ name: Build Docker image for frontend-pwa (Production)
 on:
   push:
     tags: ['v*.*.*']
+    branches:
+      - 'switch*'
     paths:
       - 'apps/frontend-pwa/**'
       - '.github/workflows/v3_frontend-pwa**'
