change base config

--- a/apps/auth/.env.production
+++ b/apps/auth/.env.production
@@ -1,7 +1,7 @@
-COOKIE_DOMAIN=.klicker.uzh.ch
-NEXTAUTH_URL=https://auth.klicker.uzh.ch
+COOKIE_DOMAIN=.klicker.xeno-isenegger.ch
+NEXTAUTH_URL=http://auth.klicker.xeno-isenegger.ch
 EDUID_CLIENT_ID=uzh_klicker_auth
 EDUID_WELL_KNOWN=https://login.eduid.ch/.well-known/openid-configuration
 NEXT_PUBLIC_EDUID_ID=eduid
-NEXT_PUBLIC_DEFAULT_REDIRECT=https://manage.klicker.uzh.ch
-NEXT_PUBLIC_AUTH_URL=https://auth.klicker.uzh.ch
+NEXT_PUBLIC_DEFAULT_REDIRECT=http://manage.klicker.xeno-isenegger.ch
+NEXT_PUBLIC_AUTH_URL=http://auth.klicker.xeno-isenegger.ch
