--- a/apps/frontend-control/.env.qa
+++ b/apps/frontend-control/.env.qa
@@ -1,10 +1,10 @@
-COOKIE_DOMAIN=.klicker-qa.bf-app.ch
+COOKIE_DOMAIN=.klicker-qa.xeno-isenegger.ch
 API_DOMAIN=backend-sls$COOKIE_DOMAIN
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/avatars"
-NEXT_PUBLIC_API_URL="https://$API_DOMAIN/api/graphql"
+NEXT_PUBLIC_API_URL="http://$API_DOMAIN/api/graphql"
 NEXT_PUBLIC_API_URL_SSR="http://klicker-uzh-qa-klicker-uzh-v3-backend-graphql:3000/api/graphql"
 
-NEXT_PUBLIC_PWA_URL="https://pwa.klicker-qa.bf-app.ch"
-NEXT_PUBLIC_MANAGE_URL="https://manage.klicker-qa.bf-app.ch"
-NEXT_PUBLIC_CONTROL_URL="https://control.klicker-qa.bf-app.ch"
+NEXT_PUBLIC_PWA_URL="http://pwa.klicker.xeno-isenegger.ch"
+NEXT_PUBLIC_MANAGE_URL="http://manage.klicker.xeno-isenegger.ch"
+NEXT_PUBLIC_CONTROL_URL="http://control.klicker.xeno-isenegger.chh"
