--- a/apps/frontend-manage/.env.production
+++ b/apps/frontend-manage/.env.production
@@ -1,14 +1,14 @@
-COOKIE_DOMAIN=.klicker.uzh.ch
+COOKIE_DOMAIN=.klicker.xeno-isenegger.ch
 API_DOMAIN=backend-sls$COOKIE_DOMAIN
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://sos-ch-dk-2.exo.io/klicker-prod/avatars"
-NEXT_PUBLIC_API_URL="https://$API_DOMAIN/api/graphql"
+NEXT_PUBLIC_API_URL="http://$API_DOMAIN/api/graphql"
 NEXT_PUBLIC_API_URL_SSR="http://klicker-v2-prod-klicker-uzh-v2-backend-graphql:3000/api/graphql"
 
-NEXT_PUBLIC_PWA_URL="https://pwa.klicker.uzh.ch"
-NEXT_PUBLIC_MANAGE_URL="https://manage.klicker.uzh.ch"
-NEXT_PUBLIC_CONTROL_URL="https://control.klicker.uzh.ch"
-NEXT_PUBLIC_AUTH_URL="https://auth.klicker.uzh.ch"
+NEXT_PUBLIC_PWA_URL="http://pwa.klicker.xeno-isenegger.ch"
+NEXT_PUBLIC_MANAGE_URL="http://manage.klicker.xeno-isenegger.ch"
+NEXT_PUBLIC_CONTROL_URL="http://control.klicker.xeno-isenegger.ch"
+NEXT_PUBLIC_AUTH_URL="http://auth.klicker.xeno-isenegger.ch"
 
 NEXT_PUBLIC_MATOMO_URL=https://webstats.uzh.ch/
 NEXT_PUBLIC_MATOMO_SITE_ID=470
