--- a/util/traefik/rules_docker.yaml
+++ b/util/traefik/rules_docker.yaml
@@ -1,43 +1,43 @@
 http:
   routers:
     api:
-      rule: "Host(`api.klicker.com`)"
+      rule: "Host(`api.klicker.xeno-isenegger.ch`)"
       entrypoints:
         - "web"
       service: "api"
 
     pwa:
-      rule: "Host(`pwa.klicker.com`)"
+      rule: "Host(`pwa.klicker.xeno-isenegger.ch`)"
       entrypoints:
         - "web"
       service: "pwa"
 
     manage:
-      rule: "Host(`manage.klicker.com`)"
+      rule: "Host(`manage.klicker.xeno-isenegger.ch`)"
       entrypoints:
         - "web"
       service: "manage"
 
     control:
-      rule: "Host(`control.klicker.com`)"
+      rule: "Host(`control.klicker.xeno-isenegger.ch`)"
       entrypoints:
         - "web"
       service: "control"
 
     auth:
-      rule: "Host(`auth.klicker.com`)"
+      rule: "Host(`auth.klicker.xeno-isenegger.ch`)"
       entrypoints:
         - "web"
       service: "auth"
 
     func-responses:
-      rule: "Host(`func-responses.klicker.com`)"
+      rule: "Host(`func-responses.klicker.xeno-isenegger.ch`)"
       entrypoints:
         - "web"
       service: "func-responses"
 
     func-response-processor:
-      rule: "Host(`func-response-processor.klicker.com`)"
+      rule: "Host(`func-response-processor.klicker.xeno-isenegger.ch`)"
       entrypoints:
         - "web"
       service: "func-response-processor"
