--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -61,12 +61,14 @@
     "prisma:push:qa": "doppler run --config stg -- pnpm run prisma:push:raw",
     "prisma:push:raw": "prisma db push --schema=src/prisma/schema.prisma",
     "prisma:reset": "doppler run --config dev -- pnpm run prisma:reset:raw",
+    "prisma:reset:yes": "doppler run --config dev -- pnpm run prisma:reset:raw -f",
     "prisma:reset:qa": "doppler run --config stg -- pnpm run prisma:reset:raw",
     "prisma:reset:raw": "prisma migrate reset --schema=src/prisma/schema.prisma --skip-seed",
     "prisma:reset:seed": "doppler run --config dev -- prisma migrate reset --schema=src/prisma/schema.prisma",
     "prisma:resetCypress": "pnpm run prisma:reset:raw",
     "prisma:resolve:prod": "doppler run --config prd -- prisma migrate resolve --schema=src/prisma/schema.prisma",
     "prisma:setup": "run-s prisma:reset prisma:push seed",
+    "prisma:setup:yes": "run-s prisma:reset:yes prisma:push seed",
     "prisma:studio": "doppler run --config dev -- pnpm run prisma:studio:raw",
     "prisma:studio:prod": "doppler run --config prd -- pnpm run prisma:studio:raw",
     "prisma:studio:qa": "doppler run --config stg -- pnpm run prisma:studio:raw",
