fix: increase concurrency for turbo, add logging middleware

--- a/apps/auth/.env.production
+++ b/apps/auth/.env.production
@@ -5,3 +5,4 @@ EDUID_WELL_KNOWN=https://login.eduid.ch/.well-known/openid-configuration
 NEXT_PUBLIC_EDUID_ID=eduid
 NEXT_PUBLIC_DEFAULT_REDIRECT=https://manage.klicker.uzh.ch
 NEXT_PUBLIC_AUTH_URL=https://auth.klicker.uzh.ch
+NEXT_PUBLIC_MANAGE_URL="https://manage.klicker.uzh.ch"
