--- a/apps/auth/.env.development
+++ b/apps/auth/.env.development
@@ -5,3 +5,4 @@ EDUID_WELL_KNOWN=https://login.test.eduid.ch/.well-known/openid-configuration
 NEXT_PUBLIC_EDUID_ID=eduid-test
 NEXT_PUBLIC_DEFAULT_REDIRECT=http://manage.klicker.com
 NEXT_PUBLIC_AUTH_URL=http://auth.klicker.com
+NEXT_PUBLIC_MANAGE_URL="http://manage.klicker.com"
