--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "build": "turbo run build",
     "build:test": "cross-env NODE_ENV=test turbo run build:test --cache-dir=.turbo",
     "check": "turbo run check --parallel --continue",
-    "dev": "doppler run --config dev -- turbo run dev",
+    "dev": "doppler run --config dev -- turbo run dev --concurrency 30",
     "dev:docs": "doppler run --config dev -- turbo run dev:docs",
     "dev:migration": "doppler run --config dev -- turbo run dev:migration",
     "dev:offline": "doppler run --config dev -- turbo run dev:offline",
