--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,7 +114,7 @@ services:
     environment:
       POSTGRES_USER: klicker
       POSTGRES_PASSWORD: klicker
-      POSTGRES_DB: klicker
+      POSTGRES_DB: klicker-prod
     ports:
       - 5432:5432
     networks:
