--- a/apps/backend-docker/.env.cypress
+++ b/apps/backend-docker/.env.cypress
@@ -1,4 +1,4 @@
-DATABASE_URL="postgres://klicker:klicker@localhost:5432/klicker"
+DATABASE_URL="postgres://klicker:klicker@localhost:5432/klicker-prod"
 APP_SECRET="abcd"
 REDIS_HOST="localhost"
 REDIS_PORT=6379
