--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -38,7 +38,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "1.14.0",
-    "yup": "1.2.0"
+    "yup": "1.2.0",
+    "dayjs": "1.11.9"
   },
   "scripts": {
     "build": "run-p build:tw:*",
