chore(deploy): add app subdomains for production

--- a/deploy/env-prod-v3/values.yaml
+++ b/deploy/env-prod-v3/values.yaml
@@ -144,6 +144,10 @@ backendGraphql:
   autoscaling:
     enabled: false
 
+  appManageSubdomain: manage.klicker.uzh.ch
+  appStudentSubdomain: pwa.klicker.uzh.ch
+  appControlSubdomain: control.klicker.uzh.ch
+
   ingress:
     hosts:
       - host: backend-sls.klicker.uzh.ch
