--- a/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
@@ -7,6 +7,9 @@ metadata:
     {{- include "chart.labels" . | nindent 4 }}
 data:
   API_DOMAIN: {{ .Values.backendGraphql.apiDomain | quote }}
+  APP_MANAGE_SUBDOMAIN: {{ .Values.backendGraphql.appManageSubdomain | quote }}
+  APP_STUDENT_SUBDOMAIN: {{ .Values.backendGraphql.appStudentSubdomain | quote }}
+  APP_CONTROL_SUBDOMAIN: {{ .Values.backendGraphql.appControlSubdomain | quote }}
   NOTIFICATION_URL: {{ .Values.backendGraphql.notifications.url | quote }}
   NOTIFICATION_SUPPORT_MAIL: {{ .Values.backendGraphql.notifications.supportEmail | quote }}
   COOKIE_DOMAIN: {{ .Values.backendGraphql.cookieDomain | quote }}
@@ -16,7 +19,7 @@ data:
   BLOB_STORAGE_ACCOUNT_NAME: {{ .Values.blobStorage.accountName | quote }}
   LISTMONK_URL: {{ .Values.listmonk.url | quote }}
   LISTMONK_USER: {{ .Values.listmonk.username | quote }}
-  LISTMONK_TEMPLATE_MIGRATION_EMAIL_NOT_FOUND: {{ .Values.listmonk.templates.emailNotFound | quote }}
+  LISTMONK_TEMPLATE_MIGRATION_EMAIL_NOT_AVAILABLE: {{ .Values.listmonk.templates.emailNotFound | quote }}
   LISTMONK_TEMPLATE_MIGRATION_REQUEST: {{ .Values.listmonk.templates.migrationRequest | quote }}
   MIGRATION_SERVICE_BUS_QUEUE_NAME: {{ .Values.migration.serviceBus.queueName | quote }}
   {{- if .Values.backendGraphql.redisCache.tls }}
