--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -8,8 +8,7 @@
     "dist"
   ],
   "dependencies": {
-    "@prisma/client": "5.9.1",
-    "xml2js": "0.6.2"
+    "@prisma/client": "5.9.1"
   },
   "devDependencies": {
     "@pothos/plugin-prisma": "3.60.0",
@@ -37,7 +36,8 @@
     "tsup": "7.2.0",
     "turndown": "7.1.2",
     "typescript": "5.1.6",
-    "uuidv4": "6.2.13"
+    "uuidv4": "6.2.13",
+    "xml2js": "0.6.2"
   },
   "scripts": {
     "analyze": "size-limit --why",
