--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -8,8 +8,7 @@
     "dist"
   ],
   "dependencies": {
-    "@prisma/client": "5.3.1",
-    "xml2js": "0.6.2"
+    "@prisma/client": "5.9.1"
   },
   "devDependencies": {
     "@pothos/plugin-prisma": "3.60.0",
@@ -29,15 +28,16 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
-    "prisma": "5.3.1",
-    "prisma-json-types-generator": "3.0.1",
+    "prisma": "5.9.1",
+    "prisma-json-types-generator": "3.0.3",
     "ramda": "0.29.0",
     "size-limit": "8.2.4",
     "ts-node": "10.9.1",
     "tsup": "7.2.0",
     "turndown": "7.1.2",
     "typescript": "5.1.6",
-    "uuidv4": "6.2.13"
+    "uuidv4": "6.2.13",
+    "xml2js": "0.6.2"
   },
   "scripts": {
     "analyze": "size-limit --why",
