--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -24,6 +24,7 @@
     "deepmerge": "4.3.1",
     "formik": "2.4.3",
     "graphql": "16.7.1",
+    "graphql-codegen-persisted-query-ids": "0.1.2",
     "graphql-ws": "5.13.1",
     "jsonwebtoken": "9.0.1",
     "localforage": "1.10.0",
