--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -31,6 +31,7 @@
     "formik": "2.4.3",
     "generate-password": "1.7.0",
     "graphql": "16.7.1",
+    "graphql-codegen-persisted-query-ids": "0.1.2",
     "graphql-ws": "5.13.1",
     "jsonwebtoken": "9.0.1",
     "localforage": "1.10.0",
