--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -12,6 +12,7 @@
     "@azure/storage-blob": "12.15.0",
     "@klicker-uzh/grading": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
+    "@klicker-uzh/util": "workspace:*",
     "@pothos/core": "3.38.0",
     "@pothos/plugin-directives": "3.10.2",
     "@pothos/plugin-prisma": "3.60.0",
