--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -7,6 +7,9 @@
   "files": [
     "dist"
   ],
+  "peerDependencies": {
+    "@klicker-uzh/util": "workspace:*"
+  },
   "dependencies": {
     "@prisma/client": "5.9.1"
   },
@@ -41,10 +44,8 @@
   },
   "scripts": {
     "analyze": "size-limit --why",
-    "build": "run-s generate build:ts build:copy",
+    "build": "run-s generate build:copy",
     "build:copy": "node src/copy.js",
-    "build:ts": "cross-env NODE_ENV=production tsup",
-    "build:watch": "cross-env NODE_ENV=development tsup --watch",
     "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "format": "prettier --write .",
