--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["src"],
+  "include": [
+    "src",
+  ],
   "compilerOptions": {
     "baseUrl": "."
   },
@@ -10,7 +12,6 @@
       "src/seed/*": "esm",
       "src/data/*": "esm",
       "src/scripts/*": "esm",
-      "src/util.ts": "esm"
     }
   }
 }
