--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@klicker-uzh/lti",
-  "version": "3.1.0-beta.36",
+  "version": "3.1.0-rc.0",
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
